<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/coverBook"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:contentDescription="@string/imageName"
        android:paddingTop="5sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/styleBook"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageName"
                android:paddingTop="5sp" />

            <TextView
                android:id="@+id/style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/style"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nameBook"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageName"
                android:paddingTop="5sp"
                android:src="@drawable/book2" />

            <TextView
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bookNames" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/authorBook"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageName"
                android:paddingTop="5sp"
                android:src="@drawable/pero" />

            <TextView
                android:id="@+id/bookAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5sp"
                android:text="@string/author"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/readerBook"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageName"
                android:paddingTop="5sp"
                android:src="@drawable/microphone" />

            <TextView
                android:id="@+id/reader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reader" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timeBook"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageName"
                android:paddingTop="5sp"
                android:src="@drawable/clock" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
